New Feature: Theme Dark & light
+ New Comp for Toggle themes
+ Context for Theme to know the actual theme
+ Svg added for ToggleTheme comp
+ Styles for themes
+ Fixed problem with bg color when open ext the first time
+ New hooks & helpers for handle theme

--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,7 @@
 }
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  font-family: SignikaNegative, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -64,17 +61,18 @@
 
   --border-radius: 8px;
 }
-:root,
+
 [data-theme="light"] {
-  background-color: #242424;
-  --primary-text: var(--text-color-dark);
+  --main-text-color: var(--text-color-dark);
   --bg-color: var(--bg-color-light);
+  --svg-theme: url(assets/svg/theme/sun.svg);
 }
 
 /* dark theme */
 [data-theme="dark"] {
-  --primary-text: var(--text-color-light);
+  --main-text-color: var(--text-color-light);
   --bg-color: var(--bg-color-dark);
+  --svg-theme: url(assets/svg/theme/moon.svg);
 }
 
 ::-webkit-scrollbar {
@@ -101,8 +99,14 @@ li {
   list-style: none;
 }
 
-a {
+a,
+a:visited,
+a:link,
+a:active,
+a:focus {
   text-decoration: none;
+  color: initial;
+  outline: 0;
 }
 
 h1,
@@ -122,7 +126,10 @@ body {
   height: 568px;
   display: flex;
   place-items: center;
-  font-family: SignikaNegative, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: SignikaNegative, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--main-text-color);
+  transition: background-color 0.25s;
 }
 
 h1 {
