--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,16 @@
   font-weight: bold;
 }
 
-@font-face {
+/* @font-face {
   font-family: SignikaNegative;
   src: url(assets/fonts/Signika_Negative/static/SignikaNegative-Light.ttf);
   font-weight: lighter;
-}
+} */
 
 :root {
-  font-family: SignikaNegative, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+  --main-font-family: SignikaNegative, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: var(--main-font-family);
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -43,23 +45,33 @@
   --neutral-color-primary: #646464;
   --neutral-color-secondary: #64646465;
 
+  --border-color-primary: #CDCDCD;
+  --border-color-secondary: #b8b1b1;
+
   --bg-color-dark: #13131a;
-  --bg-color-light: #f3f3f3;
+  --bg-color-light: #fdfdfd;
 
   --text-color-light: #ffffff;
   --text-color-dark: #0a0909;
+
+  --bg-color-inputs-dark: #2f2f2f;
+
+  /* icons */
+
+  --icons-size-primary: 24px;
 
   /* general font sizes  */
 
   --font-size-title: 26px;
   --font-size-secondary-title: 22px;
+  --font-size-semi-title: 20px;
   --font-size-common: 13px;
   --font-size-small: 12px;
   --font-size-standard: 16px;
 
   /* others sizes */
 
-  --border-radius: 8px;
+  --border-radius-primary: 8px;
 }
 
 [data-theme="light"] {
@@ -73,6 +85,7 @@
   --main-text-color: var(--text-color-light);
   --bg-color: var(--bg-color-dark);
   --svg-theme: url(assets/svg/theme/moon.svg);
+  --bg-color-inputs: var(--bg-color-inputs-dark);
 }
 
 ::-webkit-scrollbar {
@@ -122,14 +135,15 @@ p {
 
 body {
   margin: 0;
-  width: 720px;
+  width: 712px;
   height: 568px;
-  display: flex;
-  place-items: center;
-  font-family: SignikaNegative, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: var(--main-font-family);
   background-color: var(--bg-color);
   color: var(--main-text-color);
   transition: background-color 0.25s;
+
+  /* test */
+  outline: 1px solid var(--main-text-color);
 }
 
 h1 {
