--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,8 @@
   --bg-color-light: #fdfdfd;
 
   --text-color-light: #ffffff;
-  --text-color-dark: #0a0909;
+  /* --text-color-dark: #0a0909; */
+  --text-color-dark: #191729;
 
   --bg-color-inputs-dark: #2f2f2f;
 
