--- a/src/ui/atoms/Buttons/CustomButton/customButton.css
+++ b/src/ui/atoms/Buttons/CustomButton/customButton.css
@@ -7,6 +7,7 @@
   border: 0;
   display: flex;
   align-items: center;
+  background-color: transparent;
 }
 
 .common-btn:focus {
@@ -20,7 +21,6 @@
 }
 
 .btn-outline {
-  background-color: var(--white);
   outline: var(--primary-color);
   border-radius: var(--border-radius-secondary);
 }
