--- a/src/ui/atoms/TabSmallView/tabSmallView.css
+++ b/src/ui/atoms/TabSmallView/tabSmallView.css
@@ -1,8 +1,9 @@
 .tab-Small-View__container {
-  width: 220px;
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  width: 320px;
   gap: 10px;
+  align-items: center;
   padding: 6px 10px;
   cursor: pointer;
   position: relative;
