--- a/src/ui/atoms/Buttons/StandardButton/standarButton.css
+++ b/src/ui/atoms/Buttons/StandardButton/standarButton.css
@@ -7,6 +7,7 @@
   color: var(--main-text-color);
 }
 
-.standard-btn-active {
+/* button para ganar en especificidad aun no se por que no agarra normal */
+button .standard-btn-active {
   color: var(--white);
 }
