--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
   --border-color-secondary: #b8b1b1;
   --border-color-third: #dfdfdf;
 
-  --bg-color-dark: #13131a;
+  --bg-color-dark: #1b1b1d;
   --bg-color-light: #fdfdfd;
 
   --text-color-light: #ffffff;
