--- a/src/ui/atoms/TabSmallView/tabSmallView.css
+++ b/src/ui/atoms/TabSmallView/tabSmallView.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: auto 1fr auto;
   width: 320px;
+  height: 40px;
   gap: 10px;
   align-items: center;
   padding: 6px 10px;
