--- a/src/ui/atoms/TabSmallView/tabSmallView.css
+++ b/src/ui/atoms/TabSmallView/tabSmallView.css
@@ -10,7 +10,7 @@
   position: relative;
   transition: background 400ms;
   overflow: hidden;
-  outline: 1px solid var(--border-color-secondary);
+  border: 1px solid var(--border-color-secondary);
   border-radius: var(--border-radius-primary);
 }
 
