--- a/src/index.css
+++ b/src/index.css
@@ -49,11 +49,12 @@
   --border-color-secondary: #b8b1b1;
   --border-color-third: #dfdfdf;
 
-  --bg-color-dark: #1b1b1d;
+  /* backgrounds */
+
   --bg-color-light: #fdfdfd;
+  --bg-color-dark: #1b1b1d;
 
   --text-color-light: #ffffff;
-  /* --text-color-dark: #0a0909; */
   --text-color-dark: #191729;
 
   --bg-color-inputs-dark: #2f2f2f;
