--- a/src/ui/molecules/SignInSignUp/LoginLayout/login_layout.css
+++ b/src/ui/molecules/SignInSignUp/LoginLayout/login_layout.css
@@ -11,7 +11,7 @@
 
 .title-login-space {
     padding-block: 6px 24px;
-    color: var(--neutral-color-third);
+    color: var(--main-text-color);
 }
 
 p.error-msg-login {
