Refactor MUI Style for components
~ Fixed styles for inputs in dark mode
~ Error msg in login changed to 14px

--- a/src/ui/molecules/SignInSignUp/LoginLayout/login_layout.css
+++ b/src/ui/molecules/SignInSignUp/LoginLayout/login_layout.css
@@ -21,6 +21,7 @@
 p.error-msg-login {
     position: relative;
     bottom: 19px;
+    font-size: 0.875rem;
     color: var(--error-color-primary-100);
 }
 
