--- a/src/index.css
+++ b/src/index.css
@@ -213,3 +213,36 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+/* line */
+
+.custom-line {
+  width: 100%;
+  height: 44px;
+  display: grid;
+  position: relative;
+}
+
+.custom-line:after {
+  border-bottom: 1px solid var(--neutral-color-secondary);
+  width: 100%;
+  height: 50%;
+  content: " ";
+  position: absolute;
+  display: flex;
+}
+
+.custom-line span {
+  position: absolute;
+  width: fit-content;
+  display: flex;
+  justify-self: center;
+  border: 1px solid var(--neutral-color-secondary);
+  border-radius: 5px;
+  padding: 1px 6px;
+  top: 11px;
+  color: var(--main-text-color);
+  background-color: var(--bg-color);
+  font-size: 14px;
+  z-index: 2;
+}
