--- a/src/ui/atoms/TabSmallView/tabSmallView.css
+++ b/src/ui/atoms/TabSmallView/tabSmallView.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: auto 1fr auto;
   width: 320px;
-  height: 44px;
+  height: max-content;
   gap: 10px;
   align-items: center;
   padding: 3px 10px;
@@ -14,7 +14,7 @@
   border-radius: var(--border-radius-primary);
 }
 
-.tab-Small-View__container > img {
+.tab-Small-View__container>img {
   width: 30px;
   height: 30px;
   border-radius: 6rem;
@@ -22,20 +22,20 @@
   object-position: center;
 }
 
-.tab-Small-View__container > span {
+.tab-Small-View__container>span {
   font-size: var(--font-size-common);
   color: var(--main-text-color);
 }
 
-.tab-Small-View__container > svg {
+.tab-Small-View__container>svg {
   width: var(--icons-size-third);
   height: var(--icons-size-third);
 }
 
-.tab-Small-View__container > .close-btn-simple > svg {
+.tab-Small-View__container>.close-btn-simple>svg {
   color: var(--main-text-color);
 }
 
-.tab-Small-View__container > .close-btn-simple:hover > svg {
+.tab-Small-View__container>.close-btn-simple:hover>svg {
   color: var(--error-color-primary-100);
 }
