Main color Changed

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
 
   --white: #fff;
 
-  --primary-color: #8758ff;
+  --primary-color: #ba68c8;
   --secondary-color: #181818;
   --third-color: #5cb8e4;
   --aux-primary-color: #f2f2f2;
