--- a/src/ui/atoms/Buttons/CustomButton/customButton.css
+++ b/src/ui/atoms/Buttons/CustomButton/customButton.css
@@ -11,6 +11,10 @@
   border-radius: var(--border-radius-secondary);
 }
 
+.common-btn[disabled] {
+  cursor: not-allowed;
+}
+
 .common-btn:focus {
   outline: none;
 }
