--- a/src/ui/organisms/TabsListings/presentational/tabs_presentational.css
+++ b/src/ui/organisms/TabsListings/presentational/tabs_presentational.css
@@ -5,16 +5,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 18px;
+    gap: 2px;
 }
 
-.tabs-not-found-results img {
-    width: 260px;
-    height: 212px;
+.tabs-not-found-results>div {
+    width: 390px;
+    height: 260px;
 }
 
 .tabs-not-found-results>span {
-    font-size: var(--font-size-title);
+    font-size: var(--font-size-secondary-title);
     color: var(--primary-color);
     font-weight: 600;
 }
